    * Made possible to make presets for TagGuesser. (BR 264632)
    * Display current timestamp in tray tooltip. (BR 278445)
    * Auto-save the playlist so that it is not lost if Amarok crashes.

  CHANGES:
    * Mark unplayble tracks in the playlist. Patch by Sandeep Raghuraman. (BR 263640)
    * Current track applet: show number of artists instead of genres. (BR 261077)

  BUGFIXES:
    * Always use English AND/OR in Collection Filter even if translations are
      in effect. (BR 279559)
    * Fix errors in the saved playlists view when removing a playlist. (BR 273358)
    * Fixed issue where the Context View wrench was not created when the
      Context View had no applets. (BR 280382)
    * Fixed off-by-one error in organize collection dialog.
    * Fixed issue that made TagGuesser dialog to forget setings. (BR 280288)
    * Fixed tags guessing from full file path. (BR 264302)
    * Work around a Qt bug that crashed Amarok in various situations. (BR 207382, BR 269227)
    * Fixed issue with TagDialog that brought to messed up digits order in numerical
      fields (year, track, disk, score). (BR 277279)
    * Made possible to store empty TagDialog's numerical fields. (BR 278921)
    * Fixed issue with TagDialog's "Open Destination" button, now It opens
      correct directory instead of parent. (BR 279147)

Version 2.4.3
  BUGFIXES:
    * Fix KWallet auth requests on every track change. (BR 278177)
    * Display correct values for pretty times (playlist length) > 1 day.
    * Update playlist length correctly after removing track. (BR 273407)
    * Fix seek backward from dbus. (Thanks to Matthieu Bedouet) (BR 263287)
    * Prevent dialog querying last.fm settings being displayed on startup if none set.
    * Fix detection of smartphones in USB storage mode. (BR 277685)
    * Fix crashes on expanding a newly cloned dynamic playlist (BR 277750)
    * Don't block the UI while calculating the filename previews. (BR 233196)